--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ before_script:
 - node_modules/.bin/newman --version
 script:
 - python -m unittest discover
-- docker build -t swagger-spring-example:1.0.0 .
-- docker run --name example_api -d -t -p 127.0.0.1:8080:8080 swagger-spring-example:1.0.0
+- docker-compose up --build -d -t swagger-spring-example:1.0.0
 - docker ps
 - count=0 && until $(curl --output /dev/null --silent --head --fail http://localhost:8080);
   do printf '.' && sleep 3 && count=$((count+1)) && if [ $count -gt 5 ]; then break;
