--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,16 @@ services:
     build: .
     ports:
         - 8080:8080
-    network_mode: host
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on: mongodb
 
   mongodb:
     image: mongo:latest
     ports:
       - 27017:27017
-    network_mode: host
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - mongodb_data:/data/db
 
