--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 - node_modules/.bin/newman --version
 script:
 - python -m unittest discover
-- docker-compose up --build -d -t swagger-spring-example:1.0.0
+- docker-compose up --build -d
 - docker ps
 - count=0 && until $(curl --output /dev/null --silent --head --fail http://localhost:8080);
   do printf '.' && sleep 3 && count=$((count+1)) && if [ $count -gt 5 ]; then break;
