--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
 - node_modules/.bin/newman run tests/postman_collection.json -e tests/postman_environment.json
 after_success:
 - docker login -u $DOCKER_USER -p $DOCKER_PASS
-- docker tag swagger-spring-example:1.0.1 permutation/uva-devops-lab-2
+- docker tag devops-lab-2_swagger permutation/uva-devops-lab-2:latest_mongodb
 - docker push permutation/uva-devops-lab-2:latest_mongodb
 env:
   global:
